Name:                meta-par-dist-tcp
Version:             0.3
Synopsis:            Distributed execution component for the meta-par framework (TCP based).

-- Version history:
-- 
-- 0.3: Initial release.

Description:        

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2011-2012
Stability:           Experimental
Category:            Parallelism
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- This is a complete scheduler for distributed (but
                 -- single threaded) execution:
                 Control.Monad.Par.Meta.Dist,
                 -- This scheduler combines multithreaded and distributed execution:
                 Control.Monad.Par.Meta.DistSMP

  Other-modules:
                 -- This is the underlying resource exposed 
                 Control.Monad.Par.Meta.Resources.Remote

  Build-depends:  
                  base >= 4 && < 5
                , bytestring >= 0.9
                , network
                , directory >= 1.1
                , ghc-prim
                , containers
                , transformers
                , deepseq >= 1.2
                , mtl
                , network-transport
                , network-transport-pipes
                , process >= 1.1
                , syb >= 0.3
                , unix >= 2.5
                , RPC
                , random 
                , meta-par
                , cereal
                , vector
                , split
                , abstract-deque


--   if !flag(NoGPU) {
--     Build-depends:
--                  --  accelerate >= 0.9.0.1
--                    cuda >= 0.4.1
--                  , vector-algorithms >= 0.5
--     ld-options: /nobackup/afoltzer/NVIDIA_GPU_Computing_SDK/C/src/mergeSort/obj/x86_64/release/mergeSort.cu.o
--   }



--   if !flag(NoGPU) {
--      Exposed-modules: 
-- --                   Control.Monad.Par.Meta.SharedMemoryAccelerate
-- --                 , Control.Monad.Par.Meta.Resources.Accelerate
--                    Data.Vector.Algorithms.CUDA.Merge
--                  , Control.Monad.Par.Meta.Resources.CUDAMergeSort
--                  , Control.Monad.Par.Meta.SMPMergeSort
--   }







-- Flag NoGPU
--   Description: Turn of GPU support and therefore accelerate dependencies.
--   Default:     True

-- Flag NoDist
--   Description: Turn of Distributed support and therefore certain dependencies.
--   Default:     False

