Name:                meta-par-dist-tcp
Version:             0.3
Synopsis:            Distributed execution component for the meta-par framework (TCP based).

-- Version history:
-- 
-- 0.3: Initial release.

Description:        

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2011-2012
Stability:           Experimental
Category:            Parallelism
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- This is a complete scheduler for distributed (but
                 -- single threaded) execution:
                 Control.Monad.Par.Meta.Dist,
                 -- This scheduler combines multithreaded and distributed execution:
                 Control.Monad.Par.Meta.DistSMP

  Other-modules:
                 -- This is the underlying resource exposed 
                 Control.Monad.Par.Meta.Resources.Remote

  Build-depends:  
                  base >= 4 && < 5
                , bytestring >= 0.9
                , network
                , directory >= 1.1
                , ghc-prim
                , containers
                , transformers
                , deepseq >= 1.2
                , mtl
                , network-transport
                , network-transport-pipes
                , process >= 1.1
                , syb >= 0.3
                , unix >= 2.5
                , RPC
                , random 
                , abstract-par
                , meta-par
                , cereal
                , vector
                , split
                , abstract-deque

  ghc-options:    -Wall
