Name:                meta-par
Version:             0.3
Synopsis:            Provides the @monad-par@ interface, but based on modular scheduler "mix-ins".

-- Version history:

-- 0.3: Initial release.

Description:        

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2011-2012
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- Meta scheduler and friends
                   Control.Monad.Par.Meta
                 -- A complete scheduler:
                 , Control.Monad.Par.Meta.SMP

                 -- Mostly internal modules for use to build other schedulers:
                 , Control.Monad.Par.Meta.Resources.SingleThreaded 
                 , Control.Monad.Par.Meta.Resources.SMP
                 , Control.Monad.Par.Meta.Resources.Backoff
                 , Control.Monad.Par.Meta.Resources.Debugging
                 , Control.Monad.Par.Meta.HotVar.IORef
                 , Data.Vector.Serialize 
                 , Data.Vector.Storable.Serialize


  Build-depends: base >= 4 && < 5
               -- This provides the interface for monad-par:
               , abstract-par 
               , mwc-random >= 0.11
               , containers
               , bytestring >= 0.9
               , abstract-deque >= 0.1.4
               , transformers >= 0.2.2.0
               , deepseq >= 1.2
               , vector
               , QuickCheck 
               , cereal >= 0.3
               , mtl >= 2.0.1.0

  if flag(affinity) {
      CPP-options: -DAFFINITY
  }

  if flag(affinity) {
    Other-modules: System.Posix.Affinity
  }

  if flag(affinity) {   
    c-sources:       cbits/pin.c
    include-dirs:    include
    includes:        pin.h
  }
  
  ghc-options: -Wall

Flag affinity
  Description: Turn on pinning to CPUs via pthread/linux scheduler calls.
  Default:     False
