Name:                monad-par-extras
Version:             0.3
Synopsis:            Combinators and extra features for Par monads


-- Version history:
--  0.3      : Factored/reorganized modules.  This module is a spinoff of 
--             the original monad-par


Description:         The modules below provide additional
                     data structures, and other added capabilities
                     layered on top of the 'Par' monad.

                       * Finish These
                       * Module Descriptions

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Simon Marlow
Maintainer:          Simon Marlow <marlowsd@gmail.com>
Copyright:           (c) Simon Marlow 2011
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- A collection of combinators for common parallel
                 -- patterns and data structure traversals:
                   Control.Monad.Par.Combinator

                 -- Deprecated AList interface
                 , Control.Monad.Par.AList

                 -- State is generally useful, but experimental
                 , Control.Monad.Par.State
 
                 -- Pedigree is experimental, but potentially useful for
                 -- many purposes such as assigning unique, reproducable
                 -- identifiers to IVars
                 , Control.Monad.Par.Pedigree

                 -- Deterministic RNG needs more testing.
                 , Control.Monad.Par.RNG


  Build-depends: base >= 4 && < 5
               -- This provides the interface which monad-par implements:
               , abstract-par == 0.3.*
               , cereal == 0.3.*
               , deepseq == 1.3.*     
               , mtl == 2.0.*
               , random == 1.0.*          
               , transformers == 0.2.*
-- -- The parallel package currently requires deepseq 1.1:
-- --               , deepseq >= 1.1 && < 1.2
--                , deepseq >= 1.2
--                , HUnit >= 1.2 
-- --               , QuickCheck <= 2
--                , QuickCheck 
--                , rdtsc >= 1.1.3.1
--                , split >= 0.1.2.3
--                , carray >= 0.1.5
--                , array >= 0.3
--                , random >= 1.0.0.0
--                , mwc-random >= 0.11
--                , transformers >= 0.2.2.0
--                , vector
--                , containers
--                , mtl >= 2.0.1.0
--                , parallel >= 3.1
--                , abstract-deque >= 0.1.4
--                , binary
--                , cereal >= 0.3
--                , bytestring >= 0.9

  ghc-options: -O2
  Other-modules:
