Name:                monad-par-extras
Version:             0.3.3
Synopsis:            Combinators and extra features for Par monads


-- Version history:
--  0.3      : Factored/reorganized modules.  This module is a spinoff of 
--             the original monad-par
--  0.3.2    : Relax depends.


Description:         The modules below provide additional
                     data structures, and other added capabilities
                     layered on top of the 'Par' monad.

                       -- * Finish These
                       -- * Module Descriptions

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton, Simon Marlow
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2012
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- A collection of combinators for common parallel
                 -- patterns and data structure traversals:
                 Control.Monad.Par.Combinator,

                 -- Deprecated AList interface
                 Control.Monad.Par.AList,

                 -- State on top of Par is generally useful, but experimental
                 Control.Monad.Par.State,
 
                 -- Deterministic RNG needs more testing.
                 Control.Monad.Par.RNG

  Other-modules:
                 -- Pedigree is experimental, but potentially useful for
                 -- many purposes such as assigning unique, reproducable
                 -- identifiers to IVars
                 Control.Monad.Par.Pedigree


  Build-depends: base >= 4 && < 5
               -- This provides the interface which monad-par implements:
               , abstract-par >= 0.3 && < 0.4
               , cereal       >= 0.3
               , deepseq      >= 1.3
               , random       >= 1.0
               , mtl          >= 2.0
               , transformers >= 0.2

  ghc-options: -O2
  Other-modules:
