name:                parfib-dist
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.8
--------------------------------------------------------------------------------
executable parfib_dist
  main-is:           parfib_dist.hs
  build-depends:     base == 4.*, 
  		     deepseq == 1.3.*, 
		     vector == 0.9.*  , 
                     abstract-par, 
		     monad-par-extras, 
		     monad-par,
		     meta-par,
		     meta-par-dist,
		     meta-par-dist-tcp,
		     RPC,
		     syb

  ghc-options:       -O2 -threaded -rtsopts -with-rtsopts=-N
  extensions:        CPP

